docroot/includes/deed4.css
/* ... */
#deed-understanding ul ul, #deed-understanding-zero ul ul {
    list-style-type:disc;
    margin-top:1em;
}

#deed-conditions div.fineprint {
    padding: 15px;
    border: 1px solid #ddd;
    color: #111;
    font-size: 0.92em;
}
#deed-conditions-no-icons li.license {
    padding-left:0px;
}
#license-freedoms-no-icons li.license {
    padding-left:0px;
}

#deed-foot {
    position: relative;
    padding: 10px 0;
    margin: 0 auto;
    color: #fff;
    text-align: left;
}

body.rtl #deed-foot {
    text-align: right;
}

.pd #deed-foot {
    color: #333;
    overflow-y: inherit;
}

#deed-foot p {
    margin: 0 20px;
    padding: 0;
}

hr {
  background: #ffffff;
  margin-bottom: 0px;
  margin-top: 18px;
}

a {
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

.pd a {
    color: #4A4902;
}

.red #deed-foot {
}

.yellow #deed-foot {
}

.green #deed-foot {
}

.pd #deed-foot {
    height: 70px;
}

.pd-grey #deed-foot {
}

#disclaimer {
    float: right;
    padding-right: 15px;
    padding-left: 20px;
}

li strong {
    color: #222;
}
li {
    margin-bottom: 8px;
}

ul.license-properties {
    list-style-image: none;
    list-style-position: outside;
    list-style-type: none;
}
li.license {
    list-style: none;
    padding-top: 5px;
}

ul.understanding li.license {
    min-height: inherit;
    padding-bottom: 15px;
}

li.license ul.license-properties {
    padding-left: 0;
}

li.license p {
    margin: 0;
    padding: 0;
}
li.license-hidden {
    list-style: none;
}

li.free {
    background: url("http://mirrors.creativecommons.org/tmp/freedomdefined-50x50.png") 0 0 no-repeat;
}

li.share, li.remix, li.commercial {
    padding-left: 0;
    padding-bottom: 0;
    min-height: 1em;
}

li.devnations {
    background: url("/images/deed/devnations.png") 0 0 no-repeat;
}

li.no-endorse{
    background: url("/images/deed/no-endorse.png") 0 0 no-repeat;
}

li.by::before {
    margin-left: -100px;
    background-image: url('/images/deed/attribution_icon_blue_x2.png');
    background-size: 61px 61px;
    display: inline-block;
    width: 61px;
    height: 61px;
    content:"";
}
li.by {

}

li.by p {
  margin-top: -61px;
}

/* Desktop small and smaller */
@media only screen and (max-width : 992px) {
  li.by::before {
    margin-left: -80px;
  }
  li.by {
    padding-left: 70px;
  }
}

/* Desktop small and smaller */
@media only screen and (max-width : 710px) {
  li.by::before {
    margin-left: -60px;
    width: 42px;
    height: 42px;
    background-size: 42px 42px;
  }
  li.by {
    padding-left: 60px;
  }
}



li.nc {
    background: url("/images/deed/nc.png") 0 0 no-repeat;
}
li.nc-jp {
    background: url("/images/deed/nc-jp.png") 0 0 no-repeat;
}
li.nc-eu {
    background: url("/images/deed/nc-eu.png") 0 0 no-repeat;
}
li.sa {
    background: url("/images/deed/sa.png") 0 0 no-repeat;
}
li.nd {
    background: url("/images/deed/nd.png") 0 0 no-repeat;
}
li.sampling, li.samplingplus{
    background: url("/images/deed/sampling.png") 0 0 no-repeat;
}
li.more {
    background: url("/images/deed/more.png") 0 0 no-repeat;
}

li.notice {
    background: url("/images/deed/notice.png") 0 0 no-repeat;
}
li.src {
    background: url("/images/deed/src.png") 0 0 no-repeat;
}
li.nolaw {
    background: url("/images/deed/nolaw.png") 0 8px no-repeat;
}
li ul li.nolaw {
    background: url("/images/deed/nolaw-small.png") 0 8px no-repeat;
    padding-left: 32px;
}
li.usage-guidelines {
    background: url("/images/deed/usage-guidelines.png") 0 0 no-repeat;
    margin-bottom: 25px;
}
li ul li.usage-guidelines {
    background: url("/images/deed/usage-guidelines-small.png") 0 6px no-repeat;
    padding-left: 32px;
    margin-bottom: 0;
}

li.publicdomain {
    background: url("/images/deed/noc.png") 0 3px no-repeat;
}

li a {
    color: #049CCF;
    text-decoration: none;
}
#referrer-metadata {
    padding: 20px;
    border-style: dotted;
}
#referrer-metadata a {
    color: #0000FF;
    text-decoration: none;
}

blockquote {
    padding:  8px;
    background-color:  #eee;
    margin:  15px 0;
    clear: both;
}

h3 {
    font-size: 1.75em;
    margin-top:  1em;
    margin-bottom:  1em;
}

#libre {
  margin-top: 1em;
}
#librepd {
    width: 150px;
    float: right;
}

#libre img, #libre a, #librepd img, #librepd a {
    margin-top: 24px;
    max-width: 140px;
    height: auto;
    border: none !important;
}

@media only screen and (max-width : 992px) {
  #libre img {
    max-width: 100px;
  }
}

@media only screen and (max-width : 768px) {
  #libre {
      display: none;
      width: 100px;
      height: 100px;
  }

  #libre img, #libre a, #librepd img, #librepd a {
      display: none;
      height: auto;
      border: none !important;
  }
}

div.bd p {
    color: #111;
    line-height:140%;
    padding-bottom:10px !important;
    font-size: 0.92em;
    margin: 0 !important;
}

#work-attribution-container {
    border: 1px solid #D5D5D5;
    margin-top: 10px;
    padding: 7px;
}

#work-attribution-container input {
    width: 93%;
    border: 1px #888a85 solid;
    height: 1.9em;
}

#attribution_help img, #citation_help img {
    border: 0;
    margin: 0;
    float: none;
}

#work-details-block div {
    margin-top: 0px;
    padding-top:15px;
    padding-bottom: 0px;
    border-top: 1px solid #ddd;
}

#work-details-block div ul {
    list-style: none;
}

#work-details-item-title {
    display: inline-block;
    width: 6em;
    text-align: right;
    margin-right: 0.5em;
}

/* This is for the GNU/GPL license: list must start at 0 and the attribute start='0' is not allowed in xhtml*/
ol.gpl { counter-reset: item -1}
li.gpl { list-style: none;}
li.gpl:before {
    content: counter(item) ". ";
    counter-increment: item;
}

/* CC Network Related */
.network {
    padding: 8px !important;
    margin-top: 1em !important;
    background-color: #d4efb9;
}

/* Language translations box */
div#languages {
    text-align: center;
    font-size: 0.9em;
    padding-bottom: 50px;
}

div#languages a {
}
/* ... */

